--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 </head>
 
 <body>
-    <p>Bruh Bruh Bruhmenian</p>
+    <p>И коме фром тьэ ланд <a href = "https://www.youtube.com/watch?v=XfR9iY5y94s">доын үндэр</a> </p>
+    <a href="hekt.mp4">
+        <canvas id="myCanvas" width="764" height="1000" style="border:6px ridge #663099; background-image: url('Captura de tela 2022-11-05 161635.jpg'); background-size: 20%;">
+        </canvas></a>
 </body>
 
 </html>
